# snowbots

./: README  testing.txt
src/09-10/ubc-tbird-ros-pkg/: Makefile  rosdep.yaml  set_ros_master.sh  stack.xml
src/09-10/ubc-tbird-ros-pkg/oscar/: .build_version  CMakeLists.txt  battery_monitor.launch  mainpage.dox  manifest.xml
src/09-10/ubc-tbird-ros-pkg/oscar/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/.svn/text-base/: Makefile.svn-base
src/09-10/ubc-tbird-ros-pkg/oscar/cfg/: oscar.cfg  sf3.cfg
src/09-10/ubc-tbird-ros-pkg/oscar/cfg/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/maps/: drag_race.map  oval.map
src/09-10/ubc-tbird-ros-pkg/oscar/maps/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/msg/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/msg/cpp/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/msg/cpp/oscar/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/msg/cpp/oscar/.svn/text-base/: path.h.svn-base
src/09-10/ubc-tbird-ros-pkg/oscar/src/: Makefile  localization.py  mapBuilder.py  speedControl.cpp  vision.cpp  visionCommander.cpp
src/09-10/ubc-tbird-ros-pkg/oscar/src/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/src/.svn/text-base/: eStop.cpp.svn-base  imageReceive.cpp.svn-base  imageReceive2.cpp.svn-base  mapNode.py.svn-base  oscarcommanderbak.py.svn-base  setSpeed.py.svn-base  vision.h.svn-base
src/09-10/ubc-tbird-ros-pkg/oscar/src/cvblob/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/src/oscar/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/oscar/src/oscar/msg/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/: CMakeLists.txt  Makefile
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/.svn/text-base/: mainpage.dox.svn-base  manifest.xml.svn-base
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/include/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/include/sb_rangefinders/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/include/sb_rangefinders/.svn/text-base/: Rangefinder.h.svn-base
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/scripts/: forceNav.py  teleop_key.sh
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/scripts/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/scripts/.svn/text-base/: forceNavCommander.py.svn-base
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/src/: irTester.cpp  ir_extractor.cpp  lidar.cpp  lidar2.cpp  lidar_cone_hugger_sim.cpp
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/src/.svn/: all-wcprops  entries
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/src/.svn/text-base/: Rangefinder.cpp.svn-base  blizzard_lidar.cpp.svn-base  coneHugger.cpp.svn-base  irExtractor.cpp.svn-base  ir_extractor.cpp.svn-base  lidar3.cpp.svn-base  lidar_cone_hugger.cpp.svn-base  lidar_cone_hugger3.cpp.svn-base  lidar_cone_hugger_sim2.cpp.svn-base
src/09-10/ubc-tbird-ros-pkg/sb_rangefinders/src/sb_rangefinders/.svn/: all-wcprops  entries
src/10-11/ros-pkg/: svn-commit.tmp
src/10-11/ros-pkg/sb_lidar/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
src/10-11/ros-pkg/sb_lidar/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_lidar/.svn/text-base/: mainpage.dox.svn-base  manifest.xml.svn-base
src/10-11/ros-pkg/sb_lidar/src/: ConeNode.cpp  ConePosition.cpp  ConePosition.h  LongestLineNav.cpp  NormalizeWall.cpp  VectorPath.cpp  cone_identification.cpp  cone_identification.h  pathing_node.cpp  pathing_node2.cpp
src/10-11/ros-pkg/sb_lidar/src/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_lidar/src/.svn/text-base/: ConeNode.h.svn-base  ConePosition.cpp.svn-base  ConePosition.h.svn-base  LongestLineNav.h.svn-base  NormalizeWall.h.svn-base  TrackWall.cpp.svn-base  TrackWall.h.svn-base  VectorPath.h.svn-base  cone_id_withTrackWall.cpp.svn-base  pathing_node.cpp.svn-base  simple_lidar.cpp.svn-base
src/10-11/ros-pkg/sb_lidar/src/PathClass/: Path.cpp  Path.h  main.cpp
src/10-11/ros-pkg/sb_lidar/src/PathClass/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_lidar/src/PathClass/.svn/text-base/: ConePosition.cpp.svn-base  ConePosition.h.svn-base
src/10-11/ros-pkg/sb_vision/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mainpage.dox
src/10-11/ros-pkg/sb_vision/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_vision/.svn/text-base/: manifest.xml.svn-base
src/10-11/ros-pkg/sb_vision/.svn/tmp/: CMakeLists.txt.2.tmp  CMakeLists.txt.3.tmp  CMakeLists.txt.tmp  tempfile.tmp
src/10-11/ros-pkg/sb_vision/img/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_vision/img/.svn/text-base/: 5.jpg.svn-base  8.jpg.svn-base  95.jpg.svn-base  98.jpg.svn-base  99.jpg.svn-base  stop_2.jpg.svn-base
src/10-11/ros-pkg/sb_vision/src/: detectrect.cpp  find_square.cpp  traffic_ros.cpp
src/10-11/ros-pkg/sb_vision/src/.svn/: all-wcprops  entries
src/10-11/ros-pkg/sb_vision/src/.svn/text-base/: oscar_stop_sign.cpp.svn-base  simple_vision.cpp.svn-base  simple_vision_mod.cpp.svn-base  stereo.cpp.svn-base  stereoVision.cpp.svn-base  stop_sign.cpp.svn-base  traffic_detect.cpp.svn-base  videoWriter.cpp.svn-base
src/10-11/ros-pkg/sb_vision/src/.svn/tmp/: circle_detect.cpp.2.tmp  circle_detect.cpp.tmp
src/other/: Makefile
src/other/.svn/: all-wcprops  entries
src/other/Koko/: README.txt
src/other/python/: diagnostic.py  foo.cfg  furious_example.py  ir_avoid.py  kalman_example.py  maps.py  nicolas_test_control.py  profile.py  robot.cfg.example  seg_map.py  simple_control.py
src/other/tbrclient/: Doxyfile  Makefile  drag-race.cpp  main.cpp  tbrclient.cpp  tbrclient.h  tbrdiag  tbrkill
src/other/tbrprobe/: Doxyfile  Makefile  Makefile.gnu  readme.txt  robot_config.h  robot_config.h.oscar  robot_config.h~  robot_config_snowfury2.h  tbrprobe  tbrprobe.c  tbrprobe_macos.sh  test_nimu.c  udp_constants.h
src/other/test/: Makefile~  coneHugger.cpp  coneHugger.cpp~  coneHugger2  (+5 more)
(+843 files in other folders)
